--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+body{
   transition: 0.3s linear;
 }
 
@@ -261,11 +264,11 @@ button[type='submit']:hover {
 
 .informations {
   width: 100%;
-  padding: 20px 0;
+  padding: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 25px;
   background-color: #313131;
   border-radius: 10px;
   color: white;
