--- a/style.css
+++ b/style.css
@@ -369,3 +369,80 @@ a {
     animation: octocat-wave 560ms ease-in-out;
   }
 }
+
+@media screen and (max-width:700px) {
+  header{
+    width: 500px;
+    margin-top: 200px;
+  }
+
+  .container{
+    width: 500px;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container_user{
+    width: 300px;
+    gap: 15px;
+  }
+
+  .user_info{
+    flex-direction: column;
+    gap: 5px;
+    text-align: center;
+  }
+
+  .informations{
+    flex-direction: column;
+  }
+
+  .social{
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+  }
+}
+
+@media screen and (max-width:500px) {
+  header{
+    width: 90%;
+    margin-top: 250px;
+  }
+
+  .search_user{
+    flex-direction: column;
+  }
+
+  .fa-search{
+    top: 80px;
+  }
+
+  #submit{
+    width: 50%;
+    margin-top: 20px;
+    position: relative;
+  }
+  
+  .container{
+    width: 100%;
+    height: 900px;
+  }
+
+  .container_user{
+    width: 90%;
+  }
+
+  .social{
+    width: 90%;
+  }
+}
+
+@media screen and (max-width:250px) {
+  header{
+    margin-top: 300px;
+  }
+}
