--- a/src/style/style.css
+++ b/src/style/style.css
@@ -18,7 +18,8 @@ body{
 }
 
 header {
-  width: 700px;
+  max-width: 900px;
+  width: 100%;
   margin-bottom: 20px;
   border-radius: 10px;
   position: relative;
@@ -183,7 +184,8 @@ button[type='submit']:hover {
 }
 
 .container {
-  width: 700px;
+  max-width: 900px;
+  width: 100%;
   height: 400px;
   background-color: #3131;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
@@ -266,8 +268,7 @@ button[type='submit']:hover {
   padding: 20px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 25px;
+  justify-content: space-around;
   background-color: #313131;
   border-radius: 10px;
   color: white;
